istio/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: my-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http-app
      protocol: HTTP
    hosts:
    - "app.virtualti.net"
  - port:
      number: 443
      name: https-app
      protocol: HTTP
    hosts:
    - "app.virtualti.net"
