istio/virtualservice.yaml
# apiVersion: networking.istio.io/v1alpha3
# kind: VirtualService
# metadata:
#   name: app-vs
#   namespace: app
# spec:
#   hosts:
#   - "*"
#   gateways:
#   - istio-system/my-gateway
#   http:
#   - name: primary-route
#     route:
#     - destination:
#         host: app-stable
#       weight: 100
#     - destination:
#         host: app-canary
#       weight: 0

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: app-vs
  namespace: app
spec:
  hosts:
  - "app.virtualti.net"
  gateways:
  - istio-system/my-gateway
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN # Algoritmo de balanceamento de carga
      warmup: 
        minimumPercent: 3.0 # Percentual mínimo de tráfego durante o warmup
        duration: 3m      # Duração do período de warmup
        aggression: 1.0   # Agilidade do ajuste do tráfego
  http:
  - name: primary-route
    match:
    - uri:
        prefix: /
    route:
    - destination:
        host: app-stable
        port:
          number: 80
      weight: 100
    - destination:
        host: app-canary
        port:
          number: 80
      weight: 0
